--- a/MatrixCalc/src/main/res/values/strings.xml
+++ b/MatrixCalc/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_name">Matrixulcation</string>
     <string name="spinner">Functions</string>
     <string name="equal">Equal</string>
+    <string name="matrix_a">Matrix A:</string>
+    <string name="matrix_b">Matrix B:</string>
 
     <string name="default_values">1,2,3\n4,5,6\n7,8,9</string>
     <string name="default_values2">9,8,7\n6,5,4\n3,2,1</string>
