--- a/MatrixCalc/src/main/res/values/strings.xml
+++ b/MatrixCalc/src/main/res/values/strings.xml
@@ -33,6 +33,6 @@
     <string name="dialog_input_error_message">\nWrong input.\n</string>
 
     <string name="toast_copied">Copied</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
 
 </resources>
