Added a "home" view. It shows a basic TextView that will soon explain how to use and navigate the application.

--- a/MatrixCalc/src/main/res/values/strings.xml
+++ b/MatrixCalc/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
 
 
     <string-array name="operations_array">
+        <item>Home</item>
         <item>Binary Operations</item>
         <item>Solve Operations</item>
         <item>Test Operations</item>
